table periodik modal overlapping fix

--- a/src/assets/css/_modal.scss
+++ b/src/assets/css/_modal.scss
@@ -167,7 +167,7 @@ span[unsur] {
   color: $dark;
   padding: 4rem;
   overflow-y: scroll;
-  max-height: 70rem;
+  max-height: 50rem;
 
   ul {
     font-size: $sm;
